--- a/NLP_Assignmnet_Final.ipynb
+++ b/NLP_Assignmnet_Final.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "blIfA0xydUuI"
       },
@@ -49,7 +49,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "gtKATjPXd0hJ"
       },
@@ -60,7 +60,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -385,19 +385,28 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#Considering 3000 documents for training and creating it's dataframe"
+      ],
+      "metadata": {
+        "id": "36IRhwhpaSnC"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "GWBZdvvGGS9-"
       },
       "outputs": [],
       "source": [
-        "df_train=df[:3000]\n"
+        "df_train=df[:3000]"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -422,8 +431,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#Taking 1000 documents for testing"
+      ],
+      "metadata": {
+        "id": "RFuOti4UaYZA"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "OQvaUvWOGe1g"
       },
@@ -434,7 +452,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -493,7 +511,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -519,7 +537,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "T1CjPauci0Mi"
       },
@@ -534,7 +552,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "g7OU-kCCi0Mj"
       },
@@ -545,14 +563,22 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Pre-processing function to apply the specified cleanup"
+      ],
+      "metadata": {
+        "id": "quZJy1YxamIc"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "_DpUpeN7vyO3"
       },
       "outputs": [],
       "source": [
-        "# Pre-processing function to apply the specified cleanup\n",
         "def preprocess_text(text):\n",
         "    # Remove URLs\n",
         "    text = re.sub(r'http\\S+', '', text)\n",
@@ -577,7 +603,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "IwIklakEKSI7"
       },
@@ -588,7 +614,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "D1f97i5zNLX5"
       },
@@ -610,8 +636,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#Removing punctuations"
+      ],
+      "metadata": {
+        "id": "IyYFR4fmarOA"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "gtFEiQxghDDT"
       },
@@ -627,8 +662,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#Performing tokenization"
+      ],
+      "metadata": {
+        "id": "tlA5nqIbat46"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "id": "ZmUv8ltHhKyF"
       },
@@ -643,7 +687,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "id": "A6ZnoACKNQnc"
       },
@@ -656,13 +700,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "AWt44LTKQ61v"
-      },
-      "source": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "-iw-QTm9Q6_q"
       },
       "source": [
@@ -671,7 +708,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "id": "8wf-rZAXRIeF"
       },
@@ -686,7 +723,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "id": "YEBIj3kcZcmv"
       },
@@ -698,7 +735,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -734,7 +771,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "id": "Pk7NV9z-hnBI"
       },
@@ -745,7 +782,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "id": "cjAYRUJHByD4"
       },
@@ -756,7 +793,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -786,7 +823,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -812,7 +849,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -836,7 +873,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "metadata": {
         "id": "bArocsvMbI0g"
       },
@@ -862,19 +899,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "metadata": {
         "id": "dkI-AN9IbcgA"
       },
       "outputs": [],
       "source": [
-        "# Initialize the TF-IDF vectorizer\n",
         "tfidf_vectorizer = TfidfVectorizer(lowercase=False, stop_words=stopwords.words('english'))"
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#Creation of TF-IDF matrix"
+      ],
+      "metadata": {
+        "id": "Qh50ybIIa5rw"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "metadata": {
         "id": "_axMkKMib2G9"
       },
@@ -889,7 +934,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "metadata": {
         "id": "rNRWRioI_20h"
       },
@@ -902,7 +947,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1524,7 +1569,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": null,
       "metadata": {
         "id": "g2ZwWE19AIhL"
       },
@@ -1534,8 +1579,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Initializing Word2Vec model using TF-IDF weights"
+      ],
+      "metadata": {
+        "id": "XrJft7YobDX5"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1563,7 +1617,6 @@
         }
       ],
       "source": [
-        "# Initialize Word2Vec model with custom initialization\n",
         "vector_size = 100  # Adjust as needed\n",
         "window = 5\n",
         "min_count = 1\n",
@@ -1590,26 +1643,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "I4BpFVDRBTsq",
-        "outputId": "3cb47acd-9fd1-466e-a07a-57ad65e8ea8a"
+        "id": "I4BpFVDRBTsq"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.10/dist-packages/numpy/core/fromnumeric.py:3432: RuntimeWarning: Mean of empty slice.\n",
-            "  return _methods._mean(a, axis=axis, dtype=dtype,\n",
-            "/usr/local/lib/python3.10/dist-packages/numpy/core/_methods.py:190: RuntimeWarning: invalid value encountered in double_scalars\n",
-            "  ret = ret.dtype.type(ret / rcount)\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# Preprocess the test documents\n",
         "test_documents = combined_list1\n",
@@ -1625,7 +1663,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1648,7 +1686,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": null,
       "metadata": {
         "id": "W3x3-AIdfqZY"
       },
@@ -1660,7 +1698,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1723,8 +1761,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#Top 5 similarity scores between the sentences"
+      ],
+      "metadata": {
+        "id": "NhpvobaWbMnc"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
